feat(ui): enlarge window and add clickable button styling